# lucidshark-duplo

./: .gitignore  Cargo.toml  LICENSE  README.md  lucidshark.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  main.rs
src/baseline/: mod.rs  storage.rs
src/cache/: mod.rs  storage.rs
src/core/: block.rs  hash.rs  mod.rs  processor.rs  source_file.rs  source_line.rs
src/export/: console.rs  json.rs  mod.rs  xml.rs
src/filetype/: c.rs  csharp.rs  css.rs  erlang.rs  go.rs  html.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  swift.rs  unknown.rs  vb.rs
src/git/: discovery.rs  mod.rs
tests/: cache_baseline_tests.rs  cli_tests.rs  detection_tests.rs  git_tests.rs  output_format_tests.rs
tests/common/: mod.rs
tests/fixtures/: css_no_comments.css  css_with_comments.css  go_no_comments.go  go_with_comments.go  html_no_comments.html  html_with_comments.html  identical_a.c  java_no_comments.java  java_with_comments.java  js_no_comments.js  js_with_comments.js  kotlin_no_comments.kt  kotlin_with_comments.kt  partial_a.c  partial_b.c  php_no_comments.php  php_with_comments.php  python_no_comments.py  python_with_comments.py  ruby_no_comments.rb  ruby_with_comments.rb  rust_no_comments.rs  rust_with_comments.rs  scala_no_comments.scala  scala_with_comments.scala  swift_no_comments.swift  swift_with_comments.swift  unique_a.c  unique_b.c  with_comments.c  without_comments.c
